[package]
name = "edamame_models"
version = "0.1.1"
edition = "2021"
authors = ["EDAMAME Technologies"]
license = "Apache-2.0"

[lints.rust]
async_fn_in_trait = "allow"

[dependencies]
# Local copy in order to allow rapid development/debug
#undeadlock = { path = "../undeadlock" }
undeadlock = { git = "https://github.com/edamametechnologies/undeadlock", branch = "main" }

tracing = "0.1.40"
tokio = { version = "1.39.2", features = ["full", "tracing"] }
# Prevent reqwest from using native-tls
# Use ring crypto provider only - rustls-no-provider prevents reqwest from adding aws-lc-rs
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
reqwest = { version = "0.13.1", default-features = false, features = ["gzip", "rustls-no-provider", "webpki-roots"] }
anyhow = "1.0.86"
serial_test = "3.1.1"
chrono = "0.4"

[lib]
name = "edamame_models"
path = "src/lib.rs" 
