[package]
name = "edamame_models"
version = "0.1.1"
edition = "2021"
authors = ["EDAMAME Technologies"]
license = "Apache-2.0"

[lints.rust]
async_fn_in_trait = "allow"

[dependencies]
# Local copy in order to allow rapid development/debug
#undeadlock = { path = "../undeadlock" }
undeadlock = { git = "https://github.com/edamametechnologies/undeadlock", branch = "main" }

tracing = "0.1.40"
tokio = { version = "1.39.2", features = ["full", "tracing"] }
# Use rustls with ring via reqwest 0.12
reqwest = { version = "0.12.28", default-features = false, features = ["gzip", "rustls-tls-webpki-roots"] }
anyhow = "1.0.86"
serial_test = "3.1.1"
chrono = "0.4"

[lib]
name = "edamame_models"
path = "src/lib.rs" 
